refactor: fix a bunch of warnings and do some refactoring